--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ footer-links:
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon, make sure you set the "url" above!
-  twitter: 
+  twitter:
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
@@ -54,9 +54,14 @@ baseurl: ""
 # !! You don't need to change any of the configuration flags below !!
 #
 
-markdown: redcarpet
+#markdown: redcarpet
+markdown: kramdown
 highlighter: pygments
 permalink: /:title/
+
+kramdown:
+  auto_ids: true
+  input: GFM
 
 # The release of Jekyll Now that you're using
 version: v1.1.0
