--- a/_config.yml
+++ b/_config.yml
@@ -54,15 +54,12 @@ baseurl: ""
 # !! You don't need to change any of the configuration flags below !!
 #
 
-#markdown: redcarpet
-markdown: kramdown
-highlighter: rouge
+markdown: redcarpet
+highlighter: pygments
 permalink: /:title/
 
-kramdown:
-  auto_ids: true
-  input: GFM
-  syntax_highlighter: rouge
+redcarpet:
+    extensions: [with_toc_data]
 
 # The release of Jekyll Now that you're using
 version: v1.1.0
