change default site

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: Roberto Piva
 email: piva.roberto.88@gmail.com
 description: Software and more.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: https://civitz.github.io # the base hostname & protocol for your site
+url: https://www.robertopiva.pro # the base hostname & protocol for your site
 twitter_username: il_civitz
 github_username: civitz
 
